using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class NPCHelper
{
    public const string ANIMATOR_NPC_STATE_PARAM_NAME = "NPCState";

    public const string ANIMATOR_DRUNK_TYPE_PARAM_NAME = "DrunkType";

    public const string ANIMATOR_GRABBED_PARAM_NAME = "Grabbed";
}
